--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,8 @@
+/* Colors:
+ * main (dark) purple: #45033e
+ * secondary (light) purple: #F1F0FF
+ * complementary gold: #907217
+*/
 body {
 	background-color: #202020;
 }
@@ -33,12 +38,21 @@ header .navbar-nav li>a {
 	border-radius: 0; /* override bootstrap style */
 	margin-bottom: 0; /* override bootstrap style */
 }
-#nav a {
+#nav a,
+#nav input {
 	font-size: 20px;
 	color: #FFF;
 }
-#nav a:hover {
+#nav a:hover,
+#nav input:hover {
 	color: #CCC;
+}
+#nav input {
+	padding: 10px 15px;
+	background-color: transparent;
+	background-repeat: no-repeat;
+	border: none;
+	outline: none;
 }
 #nav .active a,
 #nav .active-dropdown,
@@ -72,10 +86,10 @@ main .nav>li>a:focus {
 	background-color: #F1F0FF;
 }
 main .btn-primary {
-	background-image: linear-gradient(to bottom, #732b6b 0%,#45033e 100%);
+	background-image: linear-gradient(to bottom, #a68e45 0%, #907217 100%);
 }
 main .btn-primary:hover {
-	background-color: #45033e;
+	background-color: #907217;
 }
 input.form-control,
 select.form-control,
@@ -109,7 +123,7 @@ h2.pageTitle {
 }
 footer {
 	text-align: center;
-	background-color: #4d1347;
+	background-color: #45033e;
 	color: #FFF;
 }
 footer a,
