--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html lang="en"
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head th:inline="text">
 	<title>[[${title != null ? title + ' - ' : ''}]]Murray White Insurance Agency, Inc.</title>
 	<meta charset="UTF-8" />
@@ -44,7 +47,7 @@
 	</header>
 	<nav id="nav" class="navbar navbar-inverse" role="navigation">
 		<div class="container">
-			<div class="navbar-header">
+			<div class="navbar-header" th:if="${!(#httpServletRequest.requestURI == '/login')}">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -53,7 +56,7 @@
 				</button>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
+				<ul class="nav navbar-nav" th:if="${!(#httpServletRequest.requestURI == '/login')}">
 					<li th:classappend="${#httpServletRequest.requestURI.matches('/|/index|/home') ? 'active' : ''}">
 						<a th:href="@{/index}">Home</a>
 					</li>
@@ -110,6 +113,14 @@
 					</li>
 					<li th:classappend="${#httpServletRequest.requestURI == '/contact' ? 'active' : ''}">
 						<a th:href="@{/contact}">Contact</a>
+					</li>
+					<li th:if="${#httpServletRequest.remoteUser}" th:classappend="${#httpServletRequest.requestURI == '/admin' ? 'active' : ''}">
+						<a th:href="@{/admin}">Admin</a>
+					</li>
+					<li th:if="${#httpServletRequest.remoteUser}">
+						<form th:action="@{logout}" method="post">
+							<input type="submit" value="Sign Out" />
+						</form>
 					</li>
 				</ul>
 			</div>
