Added testimonials to database files and to the application. Now a random testimonial can be picked out from the list of testimonials. This happens for every page load.

--- a/src/main/resources/templates/about/index.html
+++ b/src/main/resources/templates/about/index.html
@@ -17,7 +17,7 @@
 					insurance companies in the selling and soliciting of insurance coverage.
 				</p>
 				<p>
-					Since that time the organization has grown from its original staff of three and it's original staff of three and its small
+					Since that time the organization has grown from its original staff of three and its small
 					office at 118 E. Commerce Street to its present location, 1911 N. Main Street. The primary source of income for the
 					organization consists of commission income and service fees for various types of insurance coverages. The agency is proud
 					of its growth in the high quality of its service to its customers.
