Updated Our Story section, and added auto-owners to the Represented Companies page

--- a/src/main/resources/templates/about/index.html
+++ b/src/main/resources/templates/about/index.html
@@ -9,32 +9,21 @@
 	<div layout:fragment="content" th:inline="text">
 		<div class="row">
 			<div class="col-xs-12">
-				<h3>Our Story</h3>
 				<p>
 					<img th:src="@{/img/murraySeniorScaled.jpg}" alt="Murray White Senior" class="img-responsive img-rounded" align="left" /> 
-					Murray M. White, Inc. was originally organized in July of 1937 after Murray M. White, Sr. agreed to purchase the assets
-					of the Manufacturers Insurance Agency and the Furniture City Insurance Agency with the purpose of acting as an agency of
-					insurance companies in the selling and soliciting of insurance coverage.
+					Murray M. White Inc. was founded over 80 years ago in High Point, North Carolina. The vision of a family owned and operated, Independent Insurance Agency, that prides itself in creating a true partnership protecting what’s most important to you, began with Murray M. White, Sr. in July of 1937.
 				</p>
 				<p>
-					Since that time the organization has grown from its original staff of three and its small
-					office at 118 E. Commerce Street to its present location, 1911 N. Main Street. The primary source of income for the
-					organization consists of commission income and service fees for various types of insurance coverages. The agency is proud
-					of its growth in the high quality of its service to its customers.
+					The doors first opened at 118 E. Commerce Street after an agreement to purchase both the Furniture City Insurance Agency and Manufactures Insurance Agency. Since then, the agency has experienced much growth in the city of High Point and while staying true to its vision. Today you can find the offices in the heart of High Point, just past the intersection of N. Main Street and Eastchester Drive.
 				</p>
 				<p>
-					Murray M. White Sr., Secretary, General Manager and Founder semi-retired in 1969 due to ill health, and passed away
-					November 26, 1971.
+					Murray White, Sr. had a soft retirement in 1969, due to some health issues and later pass on November 26, 1971.  He left the business to his son, Murray White, Jr. Since then, the business has again been passed on to Murray White, III and you can find his son, Murray White, IV assisting with carrying on the initial vision set forth by the patriarch of the family.
 				</p>
 				<p>
-					The affairs of the agency are handled administratively by the officers and staff although the officers are responsible for
-					establishing policy, approving new programs,  and delegating responsibility and authority. The agency's success is directly
-					related to the loyalty and dedication of both the officers and the staff.
+					A lot has happened since Murray White, Sr opened the doors in 1937. In 1973, they opened an affiliate business, Murray White Associates, which has a specialty in life and health insurance. In 2013, a decision was made to slightly adjust the original name, Murray M. White, Inc. to draw more attention to the Insurance business they are in. Hence was born, Murray M. White Insurance.
 				</p>
 				<p>
-					Murray White Associates, Inc. is an affiliated company of Murray M. White, Inc. and was founded June 9, 1973 with the
-					purpose of specializing in employee benefit programs, group life and medical long term disability, high limit accident,
-					pension and profit sharing programs, individual life, disability income and hospital insurance.
+					Amidst all the change, in both the city of High Point and the insurance industry, Murray M. White Insurance has remained a prominent name in town. Living out the original vision the company was founded on, Murray M. White Insurance is proud to be a family owned and operated Insurance Company in High Point, NC, with a focus on creating a true partnership in protecting what’s most important to you!
 				</p>
 			</div>
 		</div>
