--- a/src/main/resources/templates/contact/index.html
+++ b/src/main/resources/templates/contact/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layouts/default"
-	th:with="title=${'Contact'},pageHeading=${'Contact Us'}">
+	th:with="title=${'Contact'},pageHeading=${'Contact Us'},useRecaptcha=${true}">
 	
 	<link layout:fragment="additionalStyle" media="all" type="text/css" rel="stylesheet" th:href="@{/css/contact.css}" />
 	<section layout:fragment="additionalScripts">
@@ -81,7 +81,7 @@
 							<label for="contactMessage">* Message</label>
 							<textarea name="contactMessage" class="form-control required"></textarea>
 							<div th:replace="common/protectionMarkup :: markup"></div>
-							<input type="submit" name="btnSubmit" value="Send Message" class="btn btn-primary pull-right" />
+							<button class="btn btn-primary pull-right g-recaptcha" th:attr="data-sitekey=${@reCaptchaConfig.getSite()}" data-callback="globalReCaptchaResponseHandler">Send Message</button>
 						</form>
 					</div>
 				</div>
