--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -170,6 +170,7 @@
 						1911 N Main St<br />
 						High Point, NC
 					</span>
+					<span class="weather"><!-- Filled in by common.js::getWeather --></span>
 				</div>
 				<div class="col-md-4 col-sm-6">
 					<h3>Our Mission</h3>
