Added Google review links.

--- a/src/main/resources/templates/contact/index.html
+++ b/src/main/resources/templates/contact/index.html
@@ -122,5 +122,24 @@
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Review Us</h3>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-12">
+								<p>
+									We appreciate your feedback at Murray White Insurance Agency. Google reviews help spread the word about our company. Please write us a review by using the link below. <br />
+									<a href="https://search.google.com/local/writereview?placeid=ChIJFxfPrtkIU4gRGHHa8isF4nI" target="_blank">Google review</a>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </html>
