--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,8 @@
 								Thank you, your appointment request has been received.
 							</h3>
 							<p>
-								An agent from Murray White Insurance Agency will be in touch with you shortly.
+								An agent from Murray White Insurance Agency will be in touch with you shortly. <br/>
+								Having a good experience? <a href="https://search.google.com/local/writereview?placeid=ChIJFxfPrtkIU4gRGHHa8isF4nI" target="_blank">Write us a review on Google!</a>
 							</p>
 						</div>
 					</div>
