--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -41,6 +41,11 @@
 							<span class="genericon genericon-mail"></span>
 						</a>
 					</span>
+					<div>
+						<a href="https://search.google.com/local/writereview?placeid=ChIJFxfPrtkIU4gRGHHa8isF4nI" target="_blank">
+							<span class="genericon genericon-comment"></span> <small>Review us on Google!</small>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
