--- a/src/main/resources/templates/companies/adminView.html
+++ b/src/main/resources/templates/companies/adminView.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layouts/admin"
-	th:with="title=${'Companies'}">
+	layout:decorator="layouts/default"
+	th:with="title=${'Companies'},pageHeading=${'Manage Represented Companies'}">
 	
 	<head>
 		<link media="all" type="text/css" rel="stylesheet" th:href="@{/css/companies/companies.css}" />
 		<link media="all" type="text/css" rel="stylesheet" th:href="@{/css/companies/adminCompanies.css}" />
 	</head>
-	<section layout:fragment="adminPageScripts">
+	<section layout:fragment="additionalScripts">
 		<script th:src="@{/js/companies/adminCompanies.js}"></script>
 	</section>
 	
-	<div layout:fragment="adminContent" th:inline="text">
+	<div layout:fragment="content" th:inline="text">
+		<div id="addCompanyContainer" class="well">
+			<a th:href="@{/companies/admin/update}" class="btn btn-primary center-block">Add Represented Company</a>
+		</div>
+		
 		<div th:replace="companies/index :: includeContent"></div>
+		
+		<!-- Modal for confirming a represented company deletion -->
+		<div id="deleteCompanyModal" class="modal fade">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h3 class="modal-title">Delete Represented Company</h3>
+					</div>
+					<div class="modal-body">
+						<p>Are you sure you want to delete the represented company from the website?</p>
+					</div>
+					<div class="modal-footer">
+						<a id="confirmDeletionLink" class="btn btn-primary">Yes</a>
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </html>
