--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,9 @@
 				<div th:if="${param.error}">
 					<p class="bg-danger errorBg">
 						<span class="glyphicon glyphicon-remove"></span>
-						Invalid username and password combination
+						[[${session[SPRING_SECURITY_LAST_EXCEPTION]}]]
 					</p>
-				</div>
+				</div>				
 				<div th:if="${param.logout}">
 					<p class="bg-success successBg">
 						<span class="glyphicon glyphicon-ok"></span>
