--- a/src/main/resources/templates/companies/companyMarkup.html
+++ b/src/main/resources/templates/companies/companyMarkup.html
@@ -1,7 +1,7 @@
 <li th:fragment="markup" xmlns:th="http://www.thymeleaf.org">
 	<div class="pull-left">
 		<a th:href="${company.url}" class="logoLink" target="_blank">
-			<img th:src="${company.image}" th:alt="${company.name}" />
+			<img th:src="${company.imageUrl}" th:alt="${company.name}" />
 		</a>
 	</div>
 	<div>
