--- a/src/main/resources/templates/companies/update.html
+++ b/src/main/resources/templates/companies/update.html
@@ -23,7 +23,7 @@
 							<div class="row">
 								<div class="col-xs-12">
 									<div class="img-container">
-										<img id="companyImage" th:src="*{image}" alt="Company image" />
+										<img id="companyImage" th:src="*{imageUrl}" alt="Company image" />
 									</div>
 									<p>Change company logo. The image must be a .jpg file that is 200 pixels wide and 50 pixels high (200x50). <br />
 									For help getting the correct file size, use the <a th:href="@{/admin/imageCropUtility}">image cropping utility</a></p>
