--- a/src/main/resources/templates/team/profile.html
+++ b/src/main/resources/templates/team/profile.html
@@ -11,7 +11,7 @@
 			<div class="col-sm-12">
 				<p>
 					<a th:href="${teamMember.largeImageUrl}">
-						<img th:src="${teamMember.image}" th:alt="${teamMember.fullName}" class="img-responsive img-rounded" align="left" />
+						<img th:src="${teamMember.imageUrl}" th:alt="${teamMember.fullName}" class="img-responsive img-rounded" align="left" />
 					</a>
 					[[${teamMember.description}]]
 				</p>
