--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -46,6 +46,9 @@
 						<a href="https://www.facebook.com/MurrayWhiteInsuranceAgency" target="_blank">
 							<span class="genericon genericon-facebook-alt"></span>
 						</a>
+						<a href="https://www.linkedin.com/company/murray-white-insurance" target="_blank">
+							<span class="genericon genericon-linkedin"></span>
+						</a>
 						<a href="mailto:murraywhite@murraymwhiteinc.com">
 							<span class="genericon genericon-mail"></span>
 						</a>
@@ -174,6 +177,9 @@
 					<span class="social">
 						<a href="https://www.facebook.com/MurrayWhiteInsuranceAgency" target="_blank">
 							<span class="genericon genericon-facebook-alt"></span>
+						</a>
+						<a href="https://www.linkedin.com/company/murray-white-insurance" target="_blank">
+							<span class="genericon genericon-linkedin"></span>
 						</a>
 						<a href="mailto:murraywhite@murraymwhiteinc.com">
 							<span class="genericon genericon-mail"></span>
