Updates property address

--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -187,7 +187,7 @@
 					</span>
 					<span class="phone">(336) 889-4747</span>
 					<span class="address">
-						1911 N Main St<br />
+						606 Idol Street<br />
 						High Point, NC
 					</span>
 					<span class="weather"><!-- Filled in by common.js::getWeather --></span>
