--- a/src/main/resources/templates/contact/index.html
+++ b/src/main/resources/templates/contact/index.html
@@ -25,7 +25,7 @@
 							<div class="col-xs-7">
 								<p>
 									Murray White Insurance Agency, Inc.<br />
-									1911 N Main St<br />
+									606 Idol Street<br />
 									High Point, North Carolina 27262
 								</p>
 							</div>
