Updated the map

--- a/src/main/resources/templates/contact/index.html
+++ b/src/main/resources/templates/contact/index.html
@@ -6,7 +6,6 @@
 	
 	<link layout:fragment="additionalStyle" media="all" type="text/css" rel="stylesheet" th:href="@{/css/contact.css}" />
 	<section layout:fragment="additionalScripts">
-		<script src="https://maps.googleapis.com/maps/api/js"></script>
 		<script th:src="@{/js/contact.js}"></script>
 	</section>
 	
@@ -43,7 +42,7 @@
 								<p>Map</p>
 							</div>
 							<div class="col-xs-7">
-								<div id="map"></div>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3228.4731314547967!2d-80.02906838444318!3d35.98430452089741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885308d9aecf1717%3A0xe669c84a6aff40c2!2sMurray%20White%20Insurance%20Agency!5e0!3m2!1sen!2sus!4v1569613549472!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 							</div>
 						</div>
 					</div>
