--- a/src/main/resources/templates/team/profile.html
+++ b/src/main/resources/templates/team/profile.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="layouts/default"
-	th:with="title=${'Team Member'},pageHeading=${teamMember.fullName + ' Profile'}">
-	
-	<link layout:fragment="additionalStyle" media="all" type="text/css" rel="stylesheet" th:href="@{/css/team/team.css}" />
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layouts/default"
+  th:with="title=${'Team Member'},pageHeading=${teamMember.fullName + ' Profile'}"
+>
+  <link
+    layout:fragment="additionalStyle"
+    media="all"
+    type="text/css"
+    rel="stylesheet"
+    th:href="@{/css/team/team.css}"
+  />
 
-	<div layout:fragment="content" th:inline="text">
-		<div class="row">
-			<div class="col-sm-12">
-				<p>
-					<a th:href="${teamMember.largeImageUrl}">
-						<img th:src="${teamMember.imageUrl}" th:alt="${teamMember.fullName}" class="img-responsive img-rounded" align="left" />
-					</a>
-					[[${teamMember.description}]]
-				</p>
-				<ul class="teamMemberInfo">
-					<li>[[${teamMember.position}]]</li>
-					<li th:if="${teamMember.extension != null}">Extension: [[${teamMember.extension}]]</li>
-					<li><a th:href="${'mailto:' + teamMember.email}">Email [[${teamMember.firstName}]]</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12">
-				<hr />
-				<a th:href="@{/team}" class="btn btn-primary">Back</a>
-			</div>
-		</div>
-	</div>
+  <div layout:fragment="content" th:inline="text">
+    <div class="row">
+      <div class="col-sm-12">
+        <p>
+          <a th:href="${teamMember.largeImageUrl}">
+            <img
+              th:src="${teamMember.imageUrl}"
+              th:alt="${teamMember.fullName}"
+              class="img-responsive img-rounded"
+              align="left"
+            />
+          </a>
+          [[${teamMember.description}]]
+        </p>
+        <ul class="teamMemberInfo">
+          <li>[[${teamMember.position}]]</li>
+          <li th:if="${teamMember.extension != null}">
+            Extension: [[${teamMember.extension}]]
+          </li>
+          <li>
+            <a th:href="${'mailto:' + teamMember.email}"
+              >Email [[${teamMember.firstName}]]</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <hr />
+        <a th:href="@{/team}" class="btn btn-primary">Back</a>
+      </div>
+    </div>
+  </div>
 </html>
