Change Disclaimer language to Privacy Policy

--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -220,7 +220,7 @@
 		</div>
 		<div class="copywright" th:inline="text">
 			&copy; Murray White Insurance Agency, Inc. [[${#dates.format(#dates.createNow(), 'yyyy')}]] |
-			<a href="#disclaimerModal" data-toggle="modal">Disclaimer</a> |
+			<a href="#disclaimerModal" data-toggle="modal">Privacy Policy</a> |
 			<a th:href="@{/admin}">Sign In</a>
 		</div>
 	</footer>
