--- a/src/main/resources/templates/disclaimer.html
+++ b/src/main/resources/templates/disclaimer.html
@@ -4,7 +4,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h3 class="modal-title">Disclaimer</h3>
+				<h3 class="modal-title">Privacy Policy</h3>
 			</div>
 			<div class="modal-body">
 				<h4>1. Acceptance of our Terms</h4>
